# the-burn-book-guide

./: .gitignore  Cargo.toml  README.md
guide/: Cargo.toml
guide/src/: main.rs
lib/: Cargo.toml
lib/src/: data.rs  inference.rs  lib.rs  model.rs  training.rs
notebooks/: inference.ipynb
