[workspace.package]
version = "0.1.0"
description = "Basic Workflow: From Training to Inference"

[workspace]
members = [ "guide","lib"]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true

[profile.size-optimized-aggressive]
inherits = "release-lto"
opt-level = "z"

[profile.test]
inherits = "release-lto"
